snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/maven-metadata.xml.sha1
38634b344d92f538177585ca2fd83ce30287fcc8